test/integration/included/stanc.expected
  $ ../../../../install/default/bin/stanc --include-paths="../included"  badrecurse1.stan
Syntax error in '../included/badrecurse1.stan', line 1, column 0, included from
'../included/badrecurse1.stan', line 1, column 0, included from
'badrecurse1.stan', line 1, column 0, include error:
   -------------------------------------------------
     1:  #include badrecurse1.stan
         ^
   -------------------------------------------------

File badrecurse1.stan recursively included itself.
  $ ../../../../install/default/bin/stanc --include-paths="../included"  badrecurse2.stan
Syntax error in '../included/badrecurse3.stan', line 1, column 0, included from
'../included/badrecurse2.stan', line 1, column 0, included from
'../included/badrecurse3.stan', line 1, column 0, included from
'badrecurse2.stan', line 1, column 0, include error:
   -------------------------------------------------
     1:  #include badrecurse2.stan
         ^
   -------------------------------------------------

File badrecurse2.stan recursively included itself.
  $ ../../../../install/default/bin/stanc --include-paths="../included"  badrecurse3.stan
Syntax error in '../included/badrecurse2.stan', line 1, column 0, included from
'../included/badrecurse3.stan', line 1, column 0, included from
'../included/badrecurse2.stan', line 1, column 0, included from
'badrecurse3.stan', line 1, column 0, include error:
   -------------------------------------------------
     1:  #include badrecurse3.stan
         ^
   -------------------------------------------------

File badrecurse3.stan recursively included itself.
  $ ../../../../install/default/bin/stanc --include-paths="../included"  dep-warning.stan
Syntax error in 'dep-warning.stan', line 1, column 2 to column 6, parsing error:
   -------------------------------------------------
     1:    real z;
           ^
     2:    # I am a deprecated comment.
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".
  $ ../../../../install/default/bin/stanc --include-paths="../included"  error_spread_over_files.stan
Syntax error in 'error_spread_over_files.stan', line 1, column 2 to column 3, parsing error:
   -------------------------------------------------
     1:    w;
           ^
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".
  $ ../../../../install/default/bin/stanc --include-paths="../included"  incl-err.stan
Syntax error in 'incl-err.stan', line 1, column 2 to column 6, parsing error:
   -------------------------------------------------
     1:    real z;
           ^
     2:    #include "I'm not here.stan"
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".
  $ ../../../../install/default/bin/stanc --include-paths="../included"  incl_stanc_helper.stan
Syntax error in 'incl_stanc_helper.stan', line 1, column 2 to column 6, parsing error:
   -------------------------------------------------
     1:    real y;
           ^
     2:    #include incl_stanc_helper2.stan
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".
  $ ../../../../install/default/bin/stanc --include-paths="../included"  incl_stanc_helper2.stan
Syntax error in 'incl_stanc_helper2.stan', line 1, column 2 to column 6, parsing error:
   -------------------------------------------------
     1:    real w;
           ^
     2:    real x;
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".
  $ ../../../../install/default/bin/stanc --include-paths="../included"  incl_stanc_helper_deprecated_warning.stan
Syntax error in 'incl_stanc_helper_deprecated_warning.stan', line 1, column 2 to column 6, parsing error:
   -------------------------------------------------
     1:    real y;
           ^
     2:    #include dep-warning.stan
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".
  $ ../../../../install/default/bin/stanc --include-paths="../included"  incl_stanc_helper_error_spread_over_files.stan
Syntax error in 'incl_stanc_helper_error_spread_over_files.stan', line 1, column 2 to column 6, parsing error:
   -------------------------------------------------
     1:    real y;
           ^
     2:    int #include error_spread_over_files.stan
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".
  $ ../../../../install/default/bin/stanc --include-paths="../included"  incl_stanc_helper_include_error.stan
Syntax error in 'incl_stanc_helper_include_error.stan', line 1, column 2 to column 6, parsing error:
   -------------------------------------------------
     1:    real y;
           ^
     2:    #include incl-err.stan
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".
  $ ../../../../install/default/bin/stanc --include-paths="../included"  incl_stanc_helper_lex_error.stan
Syntax error in 'incl_stanc_helper_lex_error.stan', line 1, column 2 to column 6, parsing error:
   -------------------------------------------------
     1:    real y;
           ^
     2:    #include lex-err.stan
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".
  $ ../../../../install/default/bin/stanc --include-paths="../included"  incl_stanc_helper_parse_error.stan
Syntax error in 'incl_stanc_helper_parse_error.stan', line 1, column 2 to column 6, parsing error:
   -------------------------------------------------
     1:    real y;
           ^
     2:    #include parse-err.stan
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".
  $ ../../../../install/default/bin/stanc --include-paths="../included"  incl_stanc_helper_semantic_error.stan
Syntax error in 'incl_stanc_helper_semantic_error.stan', line 1, column 2 to column 6, parsing error:
   -------------------------------------------------
     1:    real y;
           ^
     2:    #include sem-err.stan
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".
  $ ../../../../install/default/bin/stanc --include-paths="../included"  included-brackets.stan

  $ ../../../../install/default/bin/stanc --include-paths="../included"  included-quote.stan

  $ ../../../../install/default/bin/stanc --include-paths="../included"  lex-err.stan
Syntax error in 'lex-err.stan', line 1, column 2 to column 6, parsing error:
   -------------------------------------------------
     1:    real z;
           ^
     2:    real w;$
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".
  $ ../../../../install/default/bin/stanc --include-paths="../included"  parse-err.stan
Syntax error in 'parse-err.stan', line 1, column 2 to column 6, parsing error:
   -------------------------------------------------
     1:    real z;
           ^
     2:    real w;=;
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".
  $ ../../../../install/default/bin/stanc --include-paths="../included"  sem-err.stan
Syntax error in 'sem-err.stan', line 1, column 2 to column 6, parsing error:
   -------------------------------------------------
     1:    real z;
           ^
     2:    int w;
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".
  $ ../../../../install/default/bin/stanc --include-paths="../included"  stanc_helper_with_bad_include_deprecated_warning.stan
Warning in '../included/dep-warning.stan', line 2, column 2, included from
'../included/incl_stanc_helper_deprecated_warning.stan', line 2, column 2, included from
'stanc_helper_with_bad_include_deprecated_warning.stan', line 2, column 0: Comments beginning with # are deprecated. Please use // in place of # for line comments.
  $ ../../../../install/default/bin/stanc --include-paths="../included"  stanc_helper_with_bad_include_error_spread_over_files.stan
Semantic error in '../included/incl_stanc_helper_error_spread_over_files.stan', line 2, column 2, included from
'stanc_helper_with_bad_include_error_spread_over_files.stan', line 2, column 0:
   -------------------------------------------------
     1:    real y;
     2:    int #include error_spread_over_files.stan
           ^
   -------------------------------------------------

(Transformed) Parameters cannot be integers.
  $ ../../../../install/default/bin/stanc --include-paths="../included"  stanc_helper_with_bad_include_include_error.stan
Syntax error in '../included/incl-err.stan', line 2, column 2, included from
'../included/incl_stanc_helper_include_error.stan', line 2, column 2, included from
'stanc_helper_with_bad_include_include_error.stan', line 2, column 0, include error:
   -------------------------------------------------
     1:    real z;
     2:    #include "I'm not here.stan"
           ^
   -------------------------------------------------

Could not find include file I'm not here.stan in specified include paths.
  $ ../../../../install/default/bin/stanc --include-paths="../included"  stanc_helper_with_bad_include_lex_error.stan
Syntax error in '../included/lex-err.stan', line 2, column 8, included from
'../included/incl_stanc_helper_lex_error.stan', line 2, column 2, included from
'stanc_helper_with_bad_include_lex_error.stan', line 2, column 0, lexing error:
   -------------------------------------------------
     1:    real z;
     2:    real w;$
                  ^
   -------------------------------------------------

Invalid character found.
  $ ../../../../install/default/bin/stanc --include-paths="../included"  stanc_helper_with_bad_include_parse_error.stan
Syntax error in '../included/parse-err.stan', line 2, column 9, included from
'../included/incl_stanc_helper_parse_error.stan', line 2, column 2, included from
'stanc_helper_with_bad_include_parse_error.stan', line 2, column 0, parsing error:
   -------------------------------------------------
     1:    real z;
     2:    real w;=;
                  ^
   -------------------------------------------------

Only top-level variable declarations allowed in data and parameters blocks.
  $ ../../../../install/default/bin/stanc --include-paths="../included"  stanc_helper_with_bad_include_semantic_error.stan
Semantic error in '../included/sem-err.stan', line 2, column 2, included from
'../included/incl_stanc_helper_semantic_error.stan', line 2, column 2, included from
'stanc_helper_with_bad_include_semantic_error.stan', line 2, column 0:
   -------------------------------------------------
     1:    real z;
     2:    int w;
           ^
   -------------------------------------------------

(Transformed) Parameters cannot be integers.
  $ ../../../../install/default/bin/stanc --include-paths="../included"  stanc_helper_with_good_include.stan

  $ ../../../../install/default/bin/stanc --include-paths="../included"  stanc_helper_with_good_include_err_after_incl.stan
Semantic error in 'stanc_helper_with_good_include_err_after_incl.stan', line 9, column 8 to column 10:
   -------------------------------------------------
     7:  }
     8:  generated quantities {
     9:    print(ww);
                 ^
    10:  }
   -------------------------------------------------

Identifier 'ww' not in scope. Did you mean 'w'?
